# primaveraAgentSYS

krew/: CLAUDE.md  commands.md
krew/builder-krewe/: GEMINI.md  README.md  pyproject.toml
krew/builder-krewe/output/dashboard/: backend.py  index.html  requirements.txt
krew/builder-krewe/src/builderkrewe/: crew.py  main.py
krew/builder-krewe/src/builderkrewe/config/: agents.yaml  tasks.yaml
krew/research-krewe/: pyproject.toml
krew/research-krewe/output/: report.md
krew/research-krewe/src/research_crew/: crew.py  main.py
krew/research-krewe/src/research_crew/config/: agents.yaml  tasks.yaml
primaverum/: .gitignore  CLAUDE.md  INFRASTRUCTURE.md  LogicModel_Evolution_Log.md  README.md  pyproject.toml
primaverum/src/primaverum/: crew.py  gui.py  main.py
primaverum/src/primaverum/config/: agents.yaml  tasks.yaml
primaverum/src/primaverum/tools/: __init__.py
