[project]
name = "builderkrewe"
version = "0.1.0"
description = "builderKrewe using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.2"
]

[project.scripts]
builderkrewe = "builderkrewe.main:run"
run_crew = "builderkrewe.main:run"
train = "builderkrewe.main:train"
replay = "builderkrewe.main:replay"
test = "builderkrewe.main:test"
run_with_trigger = "builderkrewe.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
